# pipleline

./: .gitignore  config.cfg  main.py  pipeline.ipynb  pyproject.toml  readme.md  sqlite_results_file.db
pipeline/: __init__.py  pipeline.py  register.py  structure.py
pipeline/component/: base.py  components.py  db_writter.py
pipeline/db/: curd.py  orm.py
