[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["RahulDas-dev <r.das699@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
confit = "^0.5.6"
pydantic = "^2.6.1"
sqlalchemy = "^2.0.25"
joblib = "^1.3.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
